--- a/_posts/2022-12-12-husky-map.md
+++ b/_posts/2022-12-12-husky-map.md
@@ -4,3 +4,5 @@ categories:
   - Projects
 permalink: /husky-map
 ---
+
+* Husky Maps is a web app for mapping the world, searching for places, and navigating around Seattle.
