--- a/_posts/2023-10-10-hugsi.md
+++ b/_posts/2023-10-10-hugsi.md
@@ -4,3 +4,5 @@ categories:
   - Work
 permalink: /hugsi
 ---
+
+* Developing backend APIs using Flutter framework \& Dart programming language, building connection with Firebase database, and integrating ChatGPT into recommendation systems
